Content changes in the portfolio section

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -134,10 +134,10 @@
 
             <div class="portfolio-container">
                 <div class="portfolio-box">
-                    <img src="photo2.jpg" alt="photo2"  >
+                    <img src="photo51.png" alt="photo2"  >
                     <div class="portfolio-layer">
-                        <h4>Web Design</h4>
-                        <p>Contrary to popular belief, Lorem Ipsum is not simply random text</p>
+                        <h4>Portfolio</h4>
+                        <p>This is my personal portfolio project. Technologies used in project HTML, CSS JavaScript.</p>
 
                         <a href="#"><span class="material-symbols-outlined">
                             link
@@ -147,10 +147,10 @@
 
 
                 <div class="portfolio-box">
-                    <img src="photo3.jpg" alt="photo2">
+                    <img src="photo52.png" alt="photo2">
                     <div class="portfolio-layer">
-                        <h4>Web Design</h4>
-                        <p>Contrary to popular belief, Lorem Ipsum is not simply random text</p>
+                        <h4>Apple Shop</h4>
+                        <p>This is a apple shop and Technologies used for this project HTML, CSS and JavaScript.</p>
 
                         <a href="#"><span class="material-symbols-outlined">
                             link
@@ -160,10 +160,10 @@
 
 
                 <div class="portfolio-box">
-                    <img src="photo4.jpg" alt="photo2">
+                    <img src="photo53.png" alt="photo2">
                     <div class="portfolio-layer">
-                        <h4>Web Design</h4>
-                        <p>Contrary to popular belief, Lorem Ipsum is not simply random text</p>
+                        <h4>Calculator</h4>
+                        <p>This is a calcular Technologies used for this project HTML, CSS and JavaScript.</p>
 
                         <a href="#"><span class="material-symbols-outlined">
                             link
@@ -173,10 +173,10 @@
 
 
                 <div class="portfolio-box">
-                    <img src="photo6.jpg" alt="photo2">
+                    <img src="photo54.png" alt="photo2">
                     <div class="portfolio-layer">
-                        <h4>Web Design</h4>
-                        <p>Contrary to popular belief, Lorem Ipsum is not simply random text</p>
+                        <h4>Labourers Hub</h4>
+                        <p>This is a project for minimization of unemployment .This is only a frontend project.</p>
 
                         <a href="#"><span class="material-symbols-outlined">
                             link
